<resources>
    <string name="app_name">Sapper</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="time">Time:</string>
    <string name="you_win_text">You win!</string>
    <string name="you_lose_text">You lose</string>
    <string name="flags_text">Flags:</string>
    <string name="to_main">To main</string>
    <string name="set_flag_text">Flag</string>
    <string name="open_cell_text">Open</string>
    <string name="correct_flags_text">Correct flags:</string>
    <string name="win_text">You WIN! You will be redirected in 5 sec</string>
    <string name="lose_text">You lose :( You will be redirected in 5 sec</string>
</resources>