<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VictoryFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/you_win_text"
                android:textColor="#4EE451"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time"
                    android:textColor="#000000"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="00:00"
                    android:textColor="#000000"
                    android:textSize="34sp" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonMain"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:text="@string/to_main"
                android:textSize="24sp" />
        </LinearLayout>

    </FrameLayout>
</layout>